tests/miniJava/neg/000152_mutation.MiniJava
class java { public static else Main ( String [ ] java ) { { } } }
